--- a/.gitignore
+++ b/.gitignore
@@ -210,6 +210,9 @@ project.lock.json
 *.feature.xlsx.*
 *.Specs_*.html
 
+# VS Code config
+.vscode
+
 #####
 # End of core ignore list, below put you custom 'per project' settings (patterns or path)
 #####
